* (bug 1998) Updated the Russian translation.
* It's now possible to invert the namespace selection at Special:Allpages and Special:Contributions
* No longer using sorbs.net to check for open proxies by default.
* What was $wgDisableUploads is now $wgEnableUploads, and should be set to true if one wishes to enable uploads.
* Supplying a reason for a block is no longer mandatory
* ...and more!

Need to merge:
* stuff


== Version Enotif+Eauthent EN+EA v2.00/CVS, 14.12.2004 ==
written by Thomas Gries, Berlin and Markus Arndt, Munich

Executive summary for the impatient reader:

Enotif adds e-mail notification to MediaWiki and sends e-mails
to watching users when a watch-listed page or user_talk page is changed
http://bugzilla.wikipedia.org/show_bug.cgi?id=454
Visit the complete documentation on http://meta.wikipedia.org/Enotif

Eauthent is a mechanism to use a temporary one-time password cycle
to check whether the email address a user has entered is a valid one.
http://bugzilla.wikipedia.org/show_bug.cgi?id=866
Visit the complete documentation on http://meta.wikipedia.org/Eauthent

The current patch has only been checked for (see DefaultSettings.php):

- php mail()
  ( = not using PEAR:Mail() module --- I do not know anyone who uses that)
  $wgSMTP = false;
- MySQL database
  ( = not using PostgreSQL --- I do not know anyone who uses that)
  $wgDBtype = "mysql";
  $wgSearchType = "MyISAM";

- STILL TODO:
  NEW (newpageletter) and CORR (minoreditletter) markers needs
  corresponding "spacers"

- table user_newtalk dropped; changes on usertalk pages and their
  notifications are now fully handled via existing table watchlist
  The user interface and behavious is unchanged to previous version.
- updaters.inc for compatibility with older mediawiki tables:
  the conversion script converts existing user_newtalk entries
  watchlist table entries
  (user_newtalk) id ==> (watchlist) NS_USER_TALK:namefromId(id) timestamp=1
- minor bug fixes: