@@ -1357,6 +1357,7 @@ class Parser
 					} else {
 						$sortkey = $text;
 					}
+					$sortkey = $wgContLang->convertCategoryKey( $sortkey );
 					$wgLinkCache->addCategoryLinkObj( $nt, $sortkey );
 					$this->mOutput->addCategoryLink( $t );
 					
