@@ -30,6 +30,7 @@ New exciting things! Need further work and testing...
 * No longer using sorbs.net to check for open proxies by default.
 * What was $wgDisableUploads is now $wgEnableUploads, and should be set to true if one wishes to enable uploads.
 * Supplying a reason for a block is no longer mandatory
+* Language conversion support for category pages
 * ...and more!
 
 Need to merge:
